# teletest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.conf
include/: ConfigManager.hpp  CrcUtil.hpp  Definitions.hpp  SerialInterface.hpp  TeleAssertion.hpp
misc/: crc.c  crc.h  crc_example.c  manageStrings.cpp  serial.c  serial.h  teletest.c  teletest.h  testables.h  uut_example.c
src/: ConfigManager.cpp  CrcUtil.cpp  SerialInterface.cpp  TeleAssertion.cpp  main.cpp
test/: test_pc_client.cpp  test_uc.cpp
